--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@
 /zinx_app_demo/mmo_game/game_client/client_Data/
 /zinx_app_demt/mmo_game/mmo_game_log/
 *.log
+
+### bin
+examples/zinx_server/zinx_server
+
