--- a/examples/zinx_server/conf/zinx.json
+++ b/examples/zinx_server/conf/zinx.json
@@ -5,5 +5,6 @@
   "MaxConn":3,
   "WorkerPoolSize":10,
   "LogDir": "./mylog",
-  "LogFile":"zinx.log"
+  "LogFile":"zinx.log",
+  "LogDebugClose":true
 }
