--- a/examples/zinx_server/conf/zinx.json
+++ b/examples/zinx_server/conf/zinx.json
@@ -1,7 +1,7 @@
 {
   "Name":"zinx server Demo",
   "Host":"127.0.0.1",
-  "TcpPort":8999,
+  "TCPPort":8999,
   "MaxConn":3,
   "WorkerPoolSize":10,
   "LogDir": "./mylog",
