--- a/examples/zinx_heartbeat/conf/zinx.json
+++ b/examples/zinx_heartbeat/conf/zinx.json
@@ -4,6 +4,6 @@
   "TcpPort":8999,
   "MaxConn":3,
   "WorkerPoolSize":10,
-  "LogDebugClose": false,
+  "LogDebugClose": true,
   "HeartbeatMax": 10
 }
