change websocket new port

--- a/examples/zinx_websocket/minicode/project.config.json
+++ b/examples/zinx_websocket/minicode/project.config.json
@@ -18,7 +18,8 @@
             "ignore": [],
             "disablePlugins": [],
             "outputPath": ""
-        }
+        },
+        "condition": false
     },
     "condition": {},
     "editorSetting": {
