--- a/examples/zinx_server/conf/zinx.json
+++ b/examples/zinx_server/conf/zinx.json
@@ -3,6 +3,7 @@
   "Host":"127.0.0.1",
   "TCPPort":8999,
   "MaxConn":3,
+  "WorkerMode": "",
   "WorkerPoolSize":10,
   "LogDir": "./mylog",
   "LogFile":"zinx.log",
