增加对kcp的支持,配置文件mode:kcp

--- a/examples/zinx_server/conf/zinx.json
+++ b/examples/zinx_server/conf/zinx.json
@@ -7,5 +7,6 @@
   "WorkerPoolSize":10,
   "LogDir": "./mylog",
   "LogFile":"zinx.log",
-  "LogIsolationLevel": 0
+  "LogIsolationLevel": 0,
+  "Mode":"kcp"
 }
