--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -23,3 +23,4 @@ jobs:
           # Exit with 1 when it finds at least one finding.
           fail_on_error: true
           #golangci_lint_flags
+          golangci_lint_version: v1.64.7
